5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1758_1580.log
== SUBMITION (2019-05-29 22:13:08) 
-- CODE:
from numpy import*
v=array((eval(input("notas:")))*1.0
n= array(eval(input("alunos:")))
i=0
faltas=0
aprovados=0
reprovados=0
soma=0
while(i<size(v)):
	if(v[i]==-1.0):
		faltas+=1
	if(v[i]>=6):
		aprovados+=1
		soma+==v[i]
	if(v[i]<6.0 and v[i]!=-1.0):
		reprovados+=1
		soma+=v[i]
	if(v[i]==max(v)):
		nome = n[i]
	i=i+1
print(faltas)
print(aprovados)
print(reprovados)
print(round(soma/(aprovados+reprovados),2))
print(nome)
-- EXECUTION TIME:
0.219962
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 3
    n= array(eval(input()))
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:13:12) 
-- CODE:
from numpy import*
v=array((eval(input("notas:")))*1.0
n= array(eval(input("alunos:")))
i=0
faltas=0
aprovados=0
reprovados=0
soma=0
while(i<size(v)):
	if(v[i]==-1.0):
		faltas+=1
	if(v[i]>=6):
		aprovados+=1
		soma+==v[i]
	if(v[i]<6.0 and v[i]!=-1.0):
		reprovados+=1
		soma+=v[i]
	if(v[i]==max(v)):
		nome = n[i]
	i=i+1
print(faltas)
print(aprovados)
print(reprovados)
print(round(soma/(aprovados+reprovados),2))
print(nome)
-- ERROR:
File "XXXX", line 3
    n= array(eval(input()))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:14:18) 
-- CODE:
from numpy import*
v=array(eval(input("notas:")))*1.0
n=array(eval(input("alunos:")))
i=0
faltas=0
aprovados=0
reprovados=0
soma=0
while(i<size(v)):
	if(v[i]==-1.0):
		faltas+=1
	if(v[i]>=6):
		aprovados+=1
		soma+==v[i]
	if(v[i]<6.0 and v[i]!=-1.0):
		reprovados+=1
		soma+=v[i]
	if(v[i]==max(v)):
		nome = n[i]
	i=i+1
print(faltas)
print(aprovados)
print(reprovados)
print(round(soma/(aprovados+reprovados),2))
print(nome)
-- EXECUTION TIME:
0.213134
-- ERROR:
  File "/home/codebench/codes/1758/1580/main.py", line 14
    soma+==v[i]
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:14:23) 
-- CODE:
from numpy import*
v=array(eval(input("notas:")))*1.0
n=array(eval(input("alunos:")))
i=0
faltas=0
aprovados=0
reprovados=0
soma=0
while(i<size(v)):
	if(v[i]==-1.0):
		faltas+=1
	if(v[i]>=6):
		aprovados+=1
		soma+==v[i]
	if(v[i]<6.0 and v[i]!=-1.0):
		reprovados+=1
		soma+=v[i]
	if(v[i]==max(v)):
		nome = n[i]
	i=i+1
print(faltas)
print(aprovados)
print(reprovados)
print(round(soma/(aprovados+reprovados),2))
print(nome)
-- ERROR:
File "XXXX", line 14
    soma+==v[i]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:54:45) 
-- CODE:
from numpy import*
v=array(eval(input("notas:")))*1.0
n=array(eval(input("alunos:")))
i=0
faltas=0
aprovados=0
reprovados=0
soma=0
while(i<size(v)):
	if(v[i]==-1.0):
		faltas+=1
	if(v[i]>=6):
		aprovados+=1
		soma+=v[i]
	if(v[i]<6.0 and v[i]!=-1.0):
		reprovados+=1
		soma+=v[i]
	if(v[i]==max(v)):
		nome = n[i]
	i=i+1
print(faltas)
print(aprovados)
print(reprovados)
print(round(soma/(aprovados+reprovados),2))
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:54:51) 
-- CODE:
from numpy import*
v=array(eval(input("notas:")))*1.0
n=array(eval(input("alunos:")))
i=0
faltas=0
aprovados=0
reprovados=0
soma=0
while(i<size(v)):
	if(v[i]==-1.0):
		faltas+=1
	if(v[i]>=6):
		aprovados+=1
		soma+=v[i]
	if(v[i]<6.0 and v[i]!=-1.0):
		reprovados+=1
		soma+=v[i]
	if(v[i]==max(v)):
		nome = n[i]
	i=i+1
print(faltas)
print(aprovados)
print(reprovados)
print(round(soma/(aprovados+reprovados),2))
print(nome)
-- EXECUTION TIME:
0.403063
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
